fix: Update JSON response structure for users path

--- a/api/components/schemas/coure.yaml
+++ b/api/components/schemas/coure.yaml
@@ -9,6 +9,7 @@ components:
         - user
         - no_duplicate_prefecture_names
         - date_spots
+        - date_spot_reviews
       properties:
         id:
           type: integer
@@ -26,3 +27,7 @@ components:
           type: array
           items:
             $ref: './address_and_date_spot.yaml#/components/schemas/AddressAndDateSpotsData'
+        date_spot_reviews:
+          type: array
+          items:
+            $ref: "./date_spot_review.yaml#/components/schemas/DateSpotReviewData"
