feat: delete user and user_name_search

--- a/api/components/schemas/request/users.yaml
+++ b/api/components/schemas/request/users.yaml
@@ -26,3 +26,10 @@ components:
           format: binary
         id:
           type: string
+    UserNameSearchData:
+      type: object
+      required:
+        - user_name
+      properties:
+        user_name:
+          type: string
