--- a/api/components/schemas/response/address_and_date_spots.yaml
+++ b/api/components/schemas/response/address_and_date_spots.yaml
@@ -33,4 +33,4 @@ components:
           type: number
           format: float
         date_spot:
-          $ref: "./date_spot.yaml#/components/schemas/DateSpotData"
+          $ref: "./date_spots.yaml#/components/schemas/DateSpotData"
