--- a/api/components/schemas/response/default.yaml
+++ b/api/components/schemas/response/default.yaml
@@ -20,7 +20,7 @@ components:
         address_and_date_spots:
           type: array
           items:
-           $ref: "./address_and_date_spot.yaml#/components/schemas/AddressAndDateSpotsData"
+           $ref: "./address_and_date_spots.yaml#/components/schemas/AddressAndDateSpotsData"
         areas:
           type: string
         genres:
