--- a/compose.yaml
+++ b/compose.yaml
@@ -8,3 +8,17 @@ services:
       SWAGGER_JSON: /openapi.yaml
     volumes:
       - ./api/resolved/openapi/openapi.yaml:/openapi.yaml:ro
+
+  db:
+    image: postgres:16
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER:-app}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-app}
+      POSTGRES_DB: ${POSTGRES_DB:-app}
+    ports:
+      - "5432:5432"
+    volumes:
+      - db_data:/var/lib/postgresql/data
+
+volumes:
+  db_data:
